--- a/wek2/index.html
+++ b/wek2/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src='loop.js'></script>
-    <!-- <script src='function.js'></script> -->
+    <!-- <script src='loop.js'></script> -->
+    <script src='main.js'></script>
 </body>
 </html>
