update function.js and wek2 main.js

--- a/Javacript/index.html
+++ b/Javacript/index.html
@@ -5,9 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body,html{
+            padding: 0px;
+
+            width: 80%;
+            margin: auto;
+            text-align: center;
+            font-size: 56px;
+        }
+        h1{
+            transition: 400ms;
+        }
+        h1:hover{
+            text-shadow: 5px 10px 20px;
+            color: deeppink;
+            transform: scale(1.2);
+        }
+    </style>
 </head>
 <body>
-    <script src='loop.js'></script>
-    <!-- <script src='function.js'></script> -->
+    <h1>Javascript</h1>
+    <!-- <script src='loop.js'></script> -->
+    <script src='function.js'></script>
 </body>
 </html>
