--- a/Javacript/index.html
+++ b/Javacript/index.html
@@ -27,6 +27,7 @@
 <body>
     <h1>Javascript</h1>
     <!-- <script src='loop.js'></script> -->
-    <script src='function.js'></script>
+    <!-- <script src='function.js'></script> -->
+    <script src='array.js'></script>
 </body>
 </html>
