--- a/Javacript/index.html
+++ b/Javacript/index.html
@@ -29,5 +29,6 @@
     <!-- <script src='loop.js'></script> -->
     <!-- <script src='function.js'></script> -->
     <script src='array.js'></script>
+    <!-- <script src='map&set.js'></script> -->
 </body>
 </html>
