Update: flex-facebook, CC9-labDay-1

--- a/Javacript/index.html
+++ b/Javacript/index.html
@@ -28,7 +28,9 @@
     <h1>Javascript</h1>
     <!-- <script src='loop.js'></script> -->
     <!-- <script src='function.js'></script> -->
-    <script src='array.js'></script>
+    <!-- <script src='array.js'></script> -->
     <!-- <script src='map&set.js'></script> -->
+    <script src='./Advanced-js/rest&spread.js' type='module'></script>
+    <script src='./Advanced-js/test.js' type='module'></script>
 </body>
 </html>
