--- a/Javacript/index.html
+++ b/Javacript/index.html
@@ -4,33 +4,149 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./Advanced-js/style.css">
     <title>Document</title>
-    <style>
-        body,html{
-            padding: 0px;
-
-            width: 80%;
-            margin: auto;
-            text-align: center;
-            font-size: 56px;
-        }
-        h1{
-            transition: 400ms;
-        }
-        h1:hover{
-            text-shadow: 5px 10px 20px;
-            color: deeppink;
-            transform: scale(1.2);
-        }
-    </style>
 </head>
 <body>
     <h1>Javascript</h1>
+
+    <!-- No.1 -->
+    <!-- <div>Users:</div>
+    <ul>
+        <li>John</li>
+        <li>Pete</li>
+    </ul> -->
+
+    <!-- No.2 || No.3 -->
+    <!-- <div>
+        <h2 class="title-1">List of companies</h2>
+        <ul>
+          <li id="1">Google</li>
+          <li class="active" id="2">Yahoo</li>
+          <li id="3">Tencent</li>
+        </ul>
+    </div> -->
+
+    <!-- No.4 -->
+    <!-- <ul>
+        <li>Cows</li>
+        <li>Donkeys</li>
+        <li>Dogs</li>
+        <li>Tigers</li>
+    </ul> -->
+
+    <!-- No.5 -->
+    <!-- <div class="createUL">
+
+    </div> -->
+
+    <!-- Browser Event -->
+    <!-- No.2 -->
+    <!-- <form action="">
+        <input type="text" id='put'>
+        <input type="text" id='put'>
+        <button id='click' onclick="alert('form submitted!')">Click me!</button>
+    </form> -->
+
+    <!-- No.3 -->
+    <!-- <form action="">
+        <input type="text" id='put'>
+        <input type="text" id='put'>
+        <button id='click'>Click me!</button>
+    </form> -->
+
+    <!-- No.4 -->
+    <!-- <a onclick='call()'>Google</a> -->
+
+    <!-- No.5 -->
+    <!-- <div class="container">
+        <input type="text" style='padding: 10px;' id='info1' name='nickname'>
+        <input type="text" style='padding: 10px;' id='info2' name='John'>
+    </div> -->
+
+    <!-- No.6 -->
+    <!-- <button id='hideMe'>Click to hide me!</button> -->
+
+    <!-- No.7 -->
+    <!-- <button id='btn-hide'><span id='hide'>Hide the text!</span></button> -->
+
+    <!-- No.8 -->
+    <!-- <button id='touch'><span id='swift'>Hide</span></button> -->
+
+    <!-- No.9 -->
+    <!-- <form action="" id='refresh'>
+        <input type="password" id='pass'>
+        <button id='btn-sub'>Submit</button>
+        <p id='phoneReq'>Phone number is required!!</p>
+    </form> -->
+
+    <!-- No.10 -->
+    <!-- <form action="" style='display: flex;' id='fm'>
+        <div class="province" style='display: flex; flex-direction: row;'>
+            <h4>
+                Region: 
+            </h4>
+            <select name="" id="mainReg" style='height: 50px; margin-top: 88px; margin-left: 10px;'>
+                <option value="select" id='reg'>Select</option> 
+                <option value="NE" id='reg'>North East</option> 
+                <option value="WM" id='reg'>West Midland</option>
+                <option value="SE" id='reg'>South East</option>
+            </select>
+        </div>
+        <div class="district" style='display: flex; flex-direction: row;'>
+            <h4>
+                City: 
+            </h4>
+            <select name="" id="mainCT" style='height: 50px; margin-top: 88px; margin-left: 10px;'>
+                <option value="">Select</option>
+            </select>
+        </div>
+    </form> -->
+
+    <!-- No.11 -->
+    <!-- <div class="container" style='display: flex; justify-content: center; align-items: center;'>
+        <button id='plus'><strong>+</strong></button>
+        <h5 id='nums'>0</h5>
+        <button id='minus'><strong>-</strong></button>
+        <button id='clear'><strong>Clear</strong></button>
+    </div> -->
+
+    <!-- No.12 -->
+    <!-- <div class="container">
+        <button id='add'>Add your activities!</button>
+        <form action="" id='todoList' style='display:flex;'>
+
+        </form>
+    </div> -->
+
+    <!-- No.13 (extra) -->
+    <div class="container">
+        <p id='buy'>What did you buy?</p>
+        <input type="text" id='buy-input'>
+        <p id='amount'>Amount</p>
+        <input type="number" id='amount-input'>
+        <p id='when'>When?</p>
+        <input type="date" name="" id="date">
+        <button id='add'>Add</button>
+    </div>
+    <div class="container">
+        <p>Total: <span id='totalCount'>0</span></p>
+        <hr>
+        <div id='storing'>
+
+        </div>
+    </div>
+
+
+
+    <!-- Scripts -->
+
     <!-- <script src='loop.js'></script> -->
     <!-- <script src='function.js'></script> -->
     <!-- <script src='array.js'></script> -->
     <!-- <script src='map&set.js'></script> -->
-    <script src='./Advanced-js/rest&spread.js' type='module'></script>
-    <script src='./Advanced-js/test.js' type='module'></script>
+    <!-- <script src='./Advanced-js/rest&spread.js' type='module'></script>
+    <script src='./Advanced-js/test.js' type='module'></script> -->
+    <script src='./Advanced-js/DOM.js'></script>
 </body>
 </html>
